# graphcast-cli

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  contributing.md
.github/workflows/: docker.yml  gen-binaries.yml  main.yml
scripts/: release.sh
src/: config.rs  lib.rs  main.rs
src/messages/: upgrade.rs
src/operator/: mod.rs  operation.rs
src/query/: mod.rs
