[package]
name = "one-shot-cli"
version = "0.0.1"
edition = "2021"
authors = ["GraphOps (axiomatic-aardvark, hopeyen)"]
description = "CLI to send one message using Graphcast SDK"
license = "Apache-2.0"
repository = "https://github.com/graphops/one-shot-cli"
keywords = ["graphprotocol", "data-integrity", "Indexer", "waku", "p2p"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
graphcast-sdk = "0.4.0"
once_cell = "1.17"
chrono = "0.4"
serde = { version = "1.0.163", features = ["rc"] }
serde_json = "1.0.96"
derive-getters = "0.2.1"
tokio = { version = "1.28.1", features = ["full", "rt"] }
anyhow = "1.0"
thiserror = "1.0.40"
ethers = "2.0.4"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
] }
clap = { version = "3.2.25", features = ["derive", "env"] }
prost = "0.11"
ethers-contract = "2.0.4"
ethers-core = "2.0.4"
ethers-derive-eip712 = "1.0.2"
async-graphql = "4.0.16"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
# Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
